@@ -674,6 +674,10 @@ U stop reply
   they did not respond.  The remote stub reports support for this stop reply to
   GDB's qSupported query.
 
+qFixedThreadList
+
+  Query packet to check if the target's thread list is fixed.
+
 *** Changes in GDB 11
 
 * The 'set disassembler-options' command now supports specifying options
